--- a/OPENGL_2.0.vcxproj.filters
+++ b/OPENGL_2.0.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClCompile Include="stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Arcball.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Arcball.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
