--- a/OPENGL_2.0.vcxproj
+++ b/OPENGL_2.0.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="include\imgui_draw.cpp" />
     <ClCompile Include="include\imgui_tables.cpp" />
     <ClCompile Include="include\imgui_widgets.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="src\core\Arcball.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\render\Shader.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="EditorUI.h" />
     <ClInclude Include="include\core\Arcball.h" />
     <ClInclude Include="include\render\Shader.h" />
+    <ClInclude Include="Mesh.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\3.3.shader.fs" />
