--- a/OPENGL_2.0.vcxproj
+++ b/OPENGL_2.0.vcxproj
@@ -96,12 +96,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\include;C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -112,14 +113,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\include;C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -128,12 +130,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\include;C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -144,14 +147,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\include;C:\Users\Huawei\source\repos\OPENGL_2.0\include\core;C:\Users\Huawei\source\repos\OPENGL_2.0;C:\Users\Huawei\source\repos\OPENGL_2.0\include\render;C:\Users\Huawei\source\repos\OPENGL_2.0\include\imgui;C:\Users\Huawei\source\repos\OPENGL_2.0\include;C:\Users\Huawei\source\repos\OPENGL_2.0\external\glm\g-truc-glm-a532f5b;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Huawei\Documents\Assimp\Assimp_install\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
