--- a/imgui.ini
+++ b/imgui.ini
@@ -5,8 +5,10 @@ Size=400,400
 [Window][Primitives]
 Pos=10,10
 Size=136,163
+Collapsed=1
 
 [Window][Model Loader]
-Pos=10,175
+Pos=10,40
 Size=136,75
+Collapsed=1
 
