--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=12,96
 Size=400,400
 
 [Window][Primitives]
@@ -10,4 +10,5 @@ Collapsed=1
 [Window][Model Loader]
 Pos=10,10
 Size=136,75
+Collapsed=1
 
