--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,17 @@ Collapsed=1
 
 [Window][Model Loader]
 Pos=10,10
-Size=136,75
+Size=136,76
 
 [Window][Additional functions:]
 Pos=10,919
-Size=200,80
+Size=200,150
+
+[Window][Mesh Info]
+Pos=1620,10
+Size=280,150
+
+[Window][InfoWindow]
+Pos=1620,10
+Size=280,150
 
